fix template login

--- a/app/template/login/login.tmpl
+++ b/app/template/login/login.tmpl
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 3 | Log in</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+{{ define "title" }}Login{{ end }}
+{{ define "class-page" }}hold-transition login-page{{ end }}
+{{ define "content" }}
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="http://localhost/static/dist/css/adminlte.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="http://localhost/static/plugins/iCheck/square/blue.css">
-  <!-- Google Font: Source Sans Pro -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-</head>
-<body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
     <a href="../../index2.html"><b>Demo</b>Golang</a>
@@ -76,9 +59,10 @@
 </div>
 <!-- /.login-box -->
 
-<!-- jQuery -->
-<script src="http://localhost/static/plugins/jquery/jquery.min.js"></script>
-<!-- Bootstrap 4 -->
+{{end}}
+
+{{define "js-inline"}}
+  <!-- Bootstrap 4 -->
 <script src="http://localhost/static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- iCheck -->
 <script src="http://localhost/static/plugins/iCheck/icheck.min.js"></script>
@@ -91,5 +75,4 @@
     })
   })
 </script>
-</body>
-</html>
+{{end}}
