--- a/app/template/hello/hello_world.tmpl
+++ b/app/template/hello/hello_world.tmpl
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sample</title>
-</head>
-<body>
+{{define "content"}}
   <div>Hello World !!!</div>
   <div>Hello {{.Data.Name}} !!!</div>
   <div>
@@ -12,5 +6,4 @@
       Logout
     </a>
   </div>
-</body>
-</html>
+{{end}}
